--- a/style.css
+++ b/style.css
@@ -39,6 +39,6 @@ footer {
   background-color: red;
 }
 /* ----------------------------------------------------- */
-.jumbotron .px-0 h1 {
+a.text-muted svg {
   background-color: red;
 }
